--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "paper-kit-react",
   "version": "1.3.0",
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "classnames": "2.2.6",
     "moment": "2.29.1",
     "node-sass": "5.0.0",
