--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.0",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "axios": "^0.27.2",
     "classnames": "2.2.6",
     "moment": "2.29.1",
     "node-sass": "5.0.0",
