--- a/package.json
+++ b/package.json
@@ -86,5 +86,7 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/paper-kit-react/issues"
   },
-  "homepage": "https://kamacoustic.github.io/cincy-steel"
+  "engines"{
+    "node": "14.15.1"
+  }
 }
